Добавил часть фронтенда и закончил .NET часть
